// Proto schema formatted by Wire, do not edit.
// Source:

syntax = "proto3";

package com.kpn.dsh.messages.common;

option java_package = "com.kpn.dsh.messages.common";

message KeyEnvelope {
    reserved 3;

    .com.kpn.dsh.messages.common.KeyHeader header = 1;

    string key = 2;
}

message KeyHeader {
    .com.kpn.dsh.messages.common.Identity identifier = 1;

    bool retained = 2;

    .com.kpn.dsh.messages.common.QoS qos = 3;
}

message Identity {
    string tenant = 1;

    oneof publisher {
        string free_form = 2;
        string user = 3;
        string client = 4;
        string application = 5;
    }
}

message DataEnvelope {
    repeated .com.kpn.dsh.messages.common.DataEnvelope.TracingEntry tracing = 2;

    oneof kind {
        bytes payload = 1;
    }

    message TracingEntry {
        option map_entry = true;

        string key = 1;

        string value = 2;
    }
}

enum QoS {
    BEST_EFFORT = 0;
    RELIABLE = 1;
}
